creacion base de datos y autenticacion de usuario

--- a/Perchero/Views/Account/Login.cshtml
+++ b/Perchero/Views/Account/Login.cshtml
@@ -41,12 +41,12 @@
             </div>
             <div><a href="@Url.Action("ForgotPassword","Account")" class="forgot">Olvidaste la contraseña?</a></div>
             <div class="form-group">
-                <a href="@Url.Action("Login","Account")" class="btn btn-success btn-quirk btn-block">Sign In</a>
+                <button type="submit" class="btn btn-success btn-quirk btn-block">INICIAR SESION</button>
             </div>
         }
         <hr class="invisible">
         <div class="form-group">
-            <a href="@Url.Action("Register","Account")" class="btn btn-default btn-quirk btn-stroke btn-stroke-thin btn-block btn-sign">Not a member? Sign up now!</a>
+            <a href="@Url.Action("Register","Account")" class="btn btn-default btn-quirk btn-stroke btn-stroke-thin btn-block btn-sign">Registrarse!</a>
         </div>
     </div>
 </div>
