--- a/Perchero/Views/Shared/_Layout.cshtml
+++ b/Perchero/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@if (!Request.IsAuthenticated)
+{
+    Response.Redirect("http://localhost:5900/Account/Login");
+}
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
