vistas admin user

--- a/Perchero/Views/Admin/EditRoles.cshtml
+++ b/Perchero/Views/Admin/EditRoles.cshtml
@@ -13,7 +13,7 @@
         <ol class="breadcrumb">
             <li><a href="@Url.Action("Index","Home")">Inicio</a></li>
             <li><a href="@Url.Action("Index","Admin")">Usuario</a></li>
-            <li><a href="@Url.Action("EditUser","Admin")">Editar Usuario</a></li>
+            <li><a href="@Url.Action("EditUser","Admin")">Editar Rol</a></li>
             <li class="active">Editar Rol</li>
         </ol>
         <div class="content">
@@ -58,14 +58,6 @@
                     </tr>
                 }
             </table>
-            <footer>
-                Dianasys &copy; 2016
-                <div class="footer-links pull-right">
-                    <a href="#">Soporte</a>
-                    <a href="#">Ayuda</a>
-                    <a href="#">Contactos</a>
-                </div>
-            </footer>
         </div>
     </div>
 }
