--- a/Perchero/Views/Admin/Create.cshtml
+++ b/Perchero/Views/Admin/Create.cshtml
@@ -20,11 +20,12 @@
             <div class="panel-heading">
                 <h4 class="panel-title">
                     Crear Usuario
+                    <button type="submit" class="btn btn-success btn-quirk btn-stroke btn-xs"><i class="glyphicon glyphicon-floppy-disk"></i></button>
+                    <a class="btn btn-default btn-quirk btn-stroke btn-xs" href="@Url.Action("Index","Admin")"><i class="glyphicon glyphicon-arrow-left"></i></a>
                 </h4>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             </div>
             <div class="panel-body form-horizontal">
-
                 <div class="form-group">
                     @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-1" })
                     <div class="col-md-11">
@@ -46,14 +47,12 @@
                     </div>
                 </div>
 
-                <div class="form-group">
+                @*<div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <button type="submit" class="btn btn-success btn-quirk btn-stroke btn-xs"><i class="glyphicon glyphicon-floppy-disk"></i></button>
                         <a class="btn btn-default btn-quirk btn-stroke btn-xs" href="@Url.Action("Index","Admin")"><i class="glyphicon glyphicon-arrow-left"></i></a>
                     </div>
-                </div>
-                <hr />
-
+                </div>*@
             </div>
         </div>
     </div>
