--- a/Perchero/Views/Shared/_Layout.cshtml
+++ b/Perchero/Views/Shared/_Layout.cshtml
@@ -258,7 +258,7 @@
                     <div class="tab-pane active" id="mainmenu">
                         <h5 class="sidebar-title">Favorites</h5>
                         <ul class="nav nav-pills nav-stacked nav-quirk">
-                            <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
+                            <li class="active"><a href=""><i class="glyphicon glyphicon-wrench"></i> <span> Configuracion</span></a></li>
                             <li><a href="widgets.html"><span class="badge pull-right">10+</span><i class="fa fa-cube"></i> <span>Widgets</span></a></li>
                             <li><a href="maps.html"><i class="fa fa-map-marker"></i> <span>Maps</span></a></li>
                         </ul>
