--- a/Perchero/Views/Shared/_Layout.cshtml
+++ b/Perchero/Views/Shared/_Layout.cshtml
@@ -256,56 +256,52 @@
                     <!-- ################# MAIN MENU ################### -->
 
                     <div class="tab-pane active" id="mainmenu">
-                        <h5 class="sidebar-title">Favorites</h5>
-                        <ul class="nav nav-pills nav-stacked nav-quirk">
-                            <li class="active"><a href=""><i class="glyphicon glyphicon-wrench"></i> <span> Configuracion</span></a></li>
-                            <li><a href="widgets.html"><span class="badge pull-right">10+</span><i class="fa fa-cube"></i> <span>Widgets</span></a></li>
-                            <li><a href="maps.html"><i class="fa fa-map-marker"></i> <span>Maps</span></a></li>
-                        </ul>
-
                         <h5 class="sidebar-title">Main Menu</h5>
                         <ul class="nav nav-pills nav-stacked nav-quirk">
+                            @if (User.IsInRole("Administrador"))
+                            {
                             <li class="nav-parent">
-                                <a href=""><i class="fa fa-check-square"></i> <span>Forms</span></a>
+                                <a href=""><i class="glyphicon glyphicon-wrench"></i> <span>Configuracion</span></a>
                                 <ul class="children">
-                                    <li><a href="general-forms.html">Form Elements</a></li>
-                                    <li><a href="form-validation.html">Form Validation</a></li>
-                                    <li><a href="form-wizards.html">Form Wizards</a></li>
-                                    <li><a href="wysiwyg.html">Text Editor</a></li>
+                                    <li><a href="@Url.Action("Create","Admin")">Nuevo usuario</a></li>
+                                    <li><a href="@Url.Action("Index","Admin")">Lista de usuarios</a></li>
+                                    <li><a href="@Url.Action("ViewAllRoles","Admin")">Lista de roles</a></li>
+                                </ul>
+                            </li>
+                            }
+                            <li class="nav-parent">
+                                <a href=""><i class="fa fa-cube"></i> <span>Tipos</span></a>
+                                <ul class="children">
+                                    <li><a href="@Url.Action("Create","Tipos")">Nuevo Tipo</a></li>
+                                    <li><a href="@Url.Action("Index","TIpos")">Lista de tipos</a></li>
                                 </ul>
                             </li>
                             <li class="nav-parent">
-                                <a href=""><i class="fa fa-suitcase"></i> <span>UI Elements</span></a>
+                                <a href=""><i class="fa fa-map-marker"></i> <span>Prendas</span></a>
                                 <ul class="children">
-                                    <li><a href="buttons.html">Buttons</a></li>
-                                    <li><a href="icons.html">Icons</a></li>
-                                    <li><a href="typography.html">Typography</a></li>
-                                    <li><a href="alerts.html">Alerts &amp; Notifications</a></li>
-                                    <li><a href="tabs-accordions.html">Tabs &amp; Accordions</a></li>
-                                    <li><a href="sliders.html">Sliders</a></li>
-                                    <li><a href="graphs.html">Graphs &amp; Charts</a></li>
-                                    <li><a href="panels.html">Panels</a></li>
-                                    <li><a href="extras.html">Extras</a></li>
+                                    <li><a href="@Url.Action("Create","Prendas")">Nueva prenda</a></li>
+                                    <li><a href="@Url.Action("Index","Prendas")">Lista de prendas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-parent">
-                                <a href=""><i class="fa fa-th-list"></i> <span>Tables</span></a>
+                                <a href=""><i class="fa fa-check-square"></i> <span>Telas</span></a>
                                 <ul class="children">
-                                    <li><a href="basic-tables.html">Basic Tables</a></li>
-                                    <li><a href="data-tables.html">Data Tables</a></li>
+                                    <li><a href="@Url.Action("Create","Telas")">Nueva tela</a></li>
+                                    <li><a href="@Url.Action("Index","Telas")">Lista de telas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-parent">
-                                <a href=""><i class="fa fa-file-text"></i> <span>Pages</span></a>
+                                <a href=""><i class="fa fa-suitcase"></i> <span>Avios</span></a>
                                 <ul class="children">
-                                    <li><a href="asset-manager.html">Asset Manager</a></li>
-                                    <li><a href="people-directory.html">People Directory</a></li>
-                                    <li><a href="timeline.html">Timeline</a></li>
-                                    <li><a href="profile.html">Profile</a></li>
-                                    <li><a href="blank.html">Blank Page</a></li>
-                                    <li><a href="notfound.html">404 Page</a></li>
-                                    <li><a href="signin.html">Sign In</a></li>
-                                    <li><a href="signup.html">Sign Up</a></li>
+                                    <li><a href="@Url.Action("Create","Avios")">Nuevo Avio</a></li>
+                                    <li><a href="@Url.Action("Index","Avios")">Lista de Avios</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-parent">
+                                <a href=""><i class="fa fa-th-list"></i> <span>Pedidos</span></a>
+                                <ul class="children">
+                                    <li><a href="@Url.Action("Create","Pedidoes")">Nuevo Pedido</a></li>
+                                    <li><a href="@Url.Action("Index","Pedidoes")">Mis Pedidos</a></li>
                                 </ul>
                             </li>
                         </ul>
