Prendas cabecerra y detalle; cretate y update

--- a/Perchero/Views/Admin/Index.cshtml
+++ b/Perchero/Views/Admin/Index.cshtml
@@ -83,7 +83,7 @@
                                         @Html.DisplayFor(modelItem => item.Email)
                                     </td>
                                     <td>
-                                       
+                                       @Html.DisplayFor(modelItem => item.Email)
                                     </td>
                                     <td>
                                         @Html.ActionLink("Editar", "EditUser", new { UserName = item.UserName }) |
