--- a/Perchero/Views/DetallePrendas/Delete.cshtml
+++ b/Perchero/Views/DetallePrendas/Delete.cshtml
@@ -12,11 +12,27 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Avio.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Avio.Nombre)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Prenda.UserId)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Prenda.UserId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tela.Nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tela.Nombre)
         </dd>
 
         <dt>
