--- a/Perchero/Views/Prendas/Create.cshtml
+++ b/Perchero/Views/Prendas/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Prenda</h4>
         <hr />
@@ -78,6 +78,8 @@
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
+
+        @Html.Partial("_ModalDetallePrendas")
     </div>
 }
 
@@ -87,4 +89,21 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script src="~/Scripts/jquery.addfield.js"></script>
+    <script>
+        $(function () {
+            var sheepItForm = $('#sheepItForm').sheepIt({
+                separator: '',
+                allowRemoveLast: true,
+                allowRemoveCurrent: true,
+                allowRemoveAll: true,
+                allowAdd: true,
+                allowAddN: true,
+                maxFormsCount: 10,
+                minFormsCount: 0,
+                iniFormsCount: 1
+            });
+        });
+    </script>
 }
