--- a/Perchero/Views/Shared/_Layout.cshtml
+++ b/Perchero/Views/Shared/_Layout.cshtml
@@ -281,6 +281,7 @@
                                 <ul class="children">
                                     <li><a href="@Url.Action("Create","Prendas")">Nueva prenda</a></li>
                                     <li><a href="@Url.Action("Index","Prendas")">Lista de prendas</a></li>
+                                    <li><a href="@Url.Action("Galeria","Prendas")">Galeria de prendas</a></li>
                                 </ul>
                             </li>
                             <li class="nav-parent">
